<resources>
    <string name="app_name">LoginFormApp</string>
    <string name="recaptcha">reCAPTCHA</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="register">REGISTER</string>
    <string name="user">User</string>
    <string name="Edit">Edit information</string>
    <string name="save">Save</string>
    <string name="payment">Payment Method</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>