<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/data_color_blue"
            android:src="@drawable/ic_login">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="670dp"
            android:background="@color/data_color_blue"
            android:src="@drawable/ic_login">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/book_icon_56"
                android:src="@drawable/book_icon_56">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/tenor_sans"
                android:gravity="center"
                android:text="@string/user"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold">

            </TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="none"
                    android:text="First Name"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_userFname"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:inputType="none"
                    android:text="......"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:inputType="none"
                    android:text="Last Name"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_userLname"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:inputType="none"
                    android:text="......."
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:inputType="none"
                    android:text="Username"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_username"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:inputType="none"
                    android:text="......."
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:inputType="none"
                    android:text="Email"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/info_userEmail"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:inputType="none"
                    android:text="........"
                    android:textAlignment="center" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_changeUserData"
                    android:layout_width="300dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="46dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_background"
                    android:text="@string/Edit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/tenor_sans"
                android:gravity="center"
                android:text="@string/payment"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/pay_method_border"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginHorizontal="20dp"
                        android:ems="10"
                        android:hint="CARD NUMBER"
                        android:inputType="number"
                        android:maxLength="16"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/editTextNumber2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:ems="10"
                        android:hint="CVV"
                        android:inputType="number"
                        android:maxLength="3"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextTextPersonName3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:ems="10"
                        android:hint="OWNER"
                        android:inputType="textPersonName"
                        android:maxLength="20"
                        android:textAlignment="center"
                        android:textAllCaps="true" />

                    <EditText
                        android:id="@+id/editTextCardDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:hint="DD"
                        android:inputType="date"
                        android:maxLength="2"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="/"
                        ></TextView>

                    <EditText
                        android:id="@+id/editTextCardMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:hint="MM"
                        android:inputType="date"
                        android:maxLength="2"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="/"
                        ></TextView>

                    <EditText
                        android:id="@+id/editTextDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:hint="YY"
                        android:inputType="date"
                        android:maxLength="2"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_saveCardInfo"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginStart="46dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#63DD68"
                android:text="@string/Edit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />


        </LinearLayout>

    </FrameLayout>

</RelativeLayout>